# CodeRecord

./: CMakeLists.txt  README.md
Android_AircraftWar/: README.md  settings.gradle
Android_AircraftWar/app/: build.gradle
Android_AircraftWar/app/debug/: output-metadata.json
Android_AircraftWar/app/src/main/: AndroidManifest.xml
Android_AircraftWar/app/src/main/res/drawable/: selector_loginactivity_button.xml
Android_AircraftWar/app/src/main/res/values/: dimens.xml  (+2 more)
Android_AircraftWar/gradle/wrapper/: gradle-wrapper.properties
Android_AircraftWar/key/: key.jks
ChatServer/: CMakeLists.txt  README.md  autobuild.sh
ChatServer/include/: public.h
ChatServer/include/server/: ChatServer.h  ChatService.h
ChatServer/include/server/db/: DB.h
ChatServer/include/server/model/: FriendModel.h  Group.hpp  GroupModel.h  GroupUser.h  OfflineMessageModel.h  User.hpp  UserModel.h
ChatServer/include/server/redis/: redis.h
ChatServer/src/: CMakeLists.txt
ChatServer/src/client/: CMakeLists.txt  main.cpp
ChatServer/src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  main.cpp
ChatServer/src/server/db/: DB.cpp
ChatServer/src/server/model/: FriendModel.cpp  GroupModel.cpp  OfflineMessageModel.cpp  UserModel.cpp
ChatServer/src/server/redis/: redis.cpp
InterestingCode/: README.md
include/: common.h  group.h  mygetch.h  scene.h
players/: player_1  player_11  player_13  player_2
src/: color.cpp  scene.cpp
sudoku/: README.md  main.cpp
sudoku/include/: color.h  myutility.inl
sudoku/players/: player  player_12  player_3
sudoku/src/: group.cpp
(+52 files in other folders)
